--- a/Practice project/.gitignore
+++ b/Practice project/.gitignore
@@ -1,5 +1,10 @@
 .DS_Store
+#exclude node js basic files 
 node_modules/
+
+#personal files to ignore 
+/(learning)HTML personal site
+/(test)HTML personal site
 
 # Xcode
 #
