--- a/Practice project/.gitignore
+++ b/Practice project/.gitignore
@@ -3,8 +3,8 @@
 node_modules/
 
 #personal files to ignore 
-/(learning)HTML personal site
-/(test)HTML personal site
+/(learning)HTML personal site/
+/(test)HTML personal site/
 
 # Xcode
 #
